# log-crafter

./: AGENTS.md  CHANGELOG.md  CHANGES.md  CMakeLists.txt  VERSIONING.md
c/: CMakeLists.txt  README.md
c/include/: query_handler.h  query_parser.h  server.h
c/src/: log_buffer.c  main.c  persistence.c  query_parser.c  server_mvp1.c.bak
c/tests/: test_keywords.py  test_mvp3.py  test_parse  test_parse_only.c  test_persistence.py  test_security.py  test_strtok  test_strtok.c  test_strtok_r  test_strtok_r.c
c/versions/mvp1-basic-tcp-server/: commit.md
c/versions/mvp2-c-thread-pool/: commit.md
c/versions/mvp2-c-thread-pool/include/: log_buffer.h  query_handler.h  server.h
c/versions/mvp2-c-thread-pool/src/: log_buffer.c  query_handler.c
c/versions/mvp2-c-thread-pool/tests/: test_client.py
c/versions/mvp3-enhanced-query/: commit.md
c/versions/mvp3-enhanced-query/include/: log_buffer.h
c/versions/mvp3-enhanced-query/src/: main.c  query_parser.c  server.c
c/versions/mvp4-persistence/: README.md  commit.md
c/versions/mvp4-persistence/include/: server.h  thread_pool.h
c/versions/mvp4-persistence/src/: main.c  persistence.c  server.c  thread_pool.c
c/versions/mvp5-security-fixes/: Makefile  commit.md
c/versions/mvp5-security-fixes/include/: log_buffer.h  persistence.h
c/versions/mvp5-security-fixes/src/: main.c  query_handler.c  server.c
ci/: README.md  github-actions.yml
cpp/: CMakeLists.txt  DEVELOPMENT_JOURNEY.md  IRC_USAGE_GUIDE.md  README.md  test_irc.py
cpp/include/: IRCChannel.h  IRCChannelManager.h  IRCClient.h  IRCCommandParser.h
cpp/src/: IRCChannel.cpp  IRCClient.cpp  IRCCommandHandler.cpp  LogServer_mvp1.cpp.bak  QueryParser.cpp  ThreadPool.cpp  main.cpp
cpp/tests/: test_mvp2.py  test_mvp3.py
cpp/versions/mvp1-cpp-oop-design/: CMakeLists.txt  commit.md
cpp/versions/mvp1-cpp-oop-design/include/: LogServer.h
cpp/versions/mvp1-cpp-oop-design/src/: main.cpp
cpp/versions/mvp2-cpp-modern-threading/: CMakeLists.txt  commit.md
cpp/versions/mvp2-cpp-modern-threading/include/: LogBuffer.h  LogServer.h  QueryHandler.h  ThreadPool.h
cpp/versions/mvp2-cpp-modern-threading/src/: LogBuffer.cpp  QueryHandler.cpp
cpp/versions/mvp3-enhanced-query/: CMakeLists.txt  README.md  commit.md
cpp/versions/mvp3-enhanced-query/include/: Logger.h  QueryHandler.h
cpp/versions/mvp3-enhanced-query/src/: LogServer.cpp
cpp/versions/mvp4-persistence/: CMakeLists.txt  README.md  commit.md  test_persistence.py
cpp/versions/mvp4-persistence/include/: LogBuffer.h  LogServer.h
cpp/versions/mvp4-persistence/src/: LogBuffer.cpp  LogServer.cpp  Logger.cpp  QueryHandler.cpp  main.cpp
cpp/versions/mvp5-irc/: commit.md
cpp/versions/mvp5-irc/include/: IRCClientManager.h  IRCCommandHandler.h  IRCServer.h  LogBuffer.h  LogServer.h  Persistence.h  QueryParser.h
cpp/versions/mvp5-irc/src/: IRCChannelManager.cpp  IRCClientManager.cpp  IRCCommandParser.cpp  IRCServer.cpp  LogBuffer.cpp  Persistence.cpp
docs/: API.md  Assumptions.md  CLI-Operations.md  DataModel.md  DeliverablesChecklist.md  Errors.md  Migration.md  Performance.md  Protocol.md  RFC-0001-overview.md  SequenceMap.md  TestPlan.md
docs/Diagrams/: component-shared.txt  sequence-irc.txt  sequence-log-ingest.txt  state-server.txt
scripts/: README.md  new_version.sh  run_integration.sh  run_smoke.sh  snapshot_mvp.sh
snapshots/c/mvp0/: CMakeLists.txt
snapshots/c/mvp0/include/: lc_server.h
snapshots/c/mvp0/src/: lc_server.c  main.c
snapshots/c/mvp1/: CMakeLists.txt
snapshots/c/mvp1/include/: lc_server.h
snapshots/c/mvp1/src/: lc_server.c  main.c
snapshots/c/mvp2/: CMakeLists.txt
snapshots/c/mvp2/include/: lc_server.h  log_buffer.h
snapshots/c/mvp2/src/: lc_server.c  log_buffer.c  main.c
snapshots/c/mvp3/: CMakeLists.txt
snapshots/c/mvp3/include/: log_buffer.h
snapshots/c/mvp3/src/: lc_server.c  log_buffer.c  main.c  query_parser.c
snapshots/c/mvp4/: CMakeLists.txt
snapshots/c/mvp4/include/: lc_server.h  log_buffer.h  persistence.h
snapshots/c/mvp4/src/: lc_server.c  log_buffer.c  main.c  persistence.c
snapshots/c/mvp5/: CMakeLists.txt
snapshots/c/mvp5/src/: main.c  query_parser.c
snapshots/cpp/mvp0/: CMakeLists.txt
snapshots/cpp/mvp0/include/: lc_server.hpp
snapshots/cpp/mvp0/src/: lc_server.cpp  main.cpp
snapshots/cpp/mvp1/: CMakeLists.txt
snapshots/cpp/mvp1/include/: lc_server.hpp
snapshots/cpp/mvp1/src/: lc_server.cpp  main.cpp
snapshots/cpp/mvp2/: CMakeLists.txt
snapshots/cpp/mvp2/include/: lc_server.hpp  log_buffer.hpp  thread_pool.hpp
snapshots/cpp/mvp2/src/: lc_server.cpp  log_buffer.cpp  main.cpp  thread_pool.cpp
snapshots/cpp/mvp3/: CMakeLists.txt
snapshots/cpp/mvp3/include/: lc_server.hpp  log_buffer.hpp
snapshots/cpp/mvp3/src/: lc_server.cpp  log_buffer.cpp  main.cpp  query_parser.cpp
snapshots/cpp/mvp4/: CMakeLists.txt
snapshots/cpp/mvp4/include/: lc_server.hpp
snapshots/cpp/mvp4/src/: lc_server.cpp  main.cpp  query_parser.cpp
snapshots/cpp/mvp5/: CMakeLists.txt
snapshots/cpp/mvp5/include/: irc_channel.hpp  irc_channel_manager.hpp  irc_server.hpp  lc_server.hpp
snapshots/cpp/mvp5/src/: irc_channel.cpp  irc_channel_manager.cpp  irc_command_parser.cpp  irc_server.cpp  lc_server.cpp  main.cpp
snapshots/cpp/mvp6/: CMakeLists.txt
snapshots/cpp/mvp6/include/: irc_channel_manager.hpp  irc_command_handler.hpp  log_buffer.hpp  query_parser.hpp
snapshots/cpp/mvp6/src/: irc_channel_manager.cpp  irc_command_handler.cpp  irc_server.cpp  lc_server.cpp  main.cpp
tests/: CMakeLists.txt  README.md  __init__.py
tests/common/: __init__.py  runtime.py
tests/integration/: __init__.py  test_integration.py
tests/smoke/: test_smoke.py
tests/spec/: __init__.py  test_spec.py
tools/: load_generator.py
work/c/include/: lc_server.h  log_buffer.h  query_parser.h  thread_pool.h
work/c/src/: lc_server.c  log_buffer.c  thread_pool.c
work/cpp/include/: irc_channel.hpp  irc_command_parser.hpp  irc_server.hpp  lc_server.hpp  persistence.hpp
work/cpp/src/: irc_channel.cpp  irc_command_handler.cpp  log_buffer.cpp  persistence.cpp
